bat.string1.lessons.bat.string1.AltPairs.scala.error
altPairs:5: error: type mismatch;
 found   : Unit
 required: String
	for(i <- 0 to str.length-1)
              ^